# product-management-ai

./: Makefile  README.md
client/: package-lock.json  package.json
server/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
server/app/: config.py  main.py
server/app/api/routes/: health.py  ticket.py  workspace.py
server/app/api/services/: ticket_service.py
server/app/db/: session.py
server/app/db/models/: __init__.py  auth.py  ticket.py  workspace.py
server/app/models/: __init__.py  ticket.py  workspace.py
server/app/schemas/: health.py  ticket.py  workspace.py
server/migrations/: env.py
server/migrations/versions/: e3d192e1949c_initial_schema.py
server/tests/: test_health.py
